# Conroys-Game-of-Life

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: conroy.cpp  conroy.h  conway.cpp  presets.cpp  presets.h  states.h  window.cpp  window.h
